@@ -2,9 +2,8 @@
 
 use strict;
 use warnings;
-use Test::Most tests => 11;
+use Test::Most tests => 10;
 use Test::NoWarnings;
-use Test::Exception;
 
 BEGIN {
 	use_ok('DateTime::Format::Genealogy');
@@ -31,6 +30,6 @@ DATA: {
 	isa($dts[1], 'DateTime');
 	ok($dts[1]->dmy() eq '11-11-1918');
 
-	throws_ok { $f->parse_datetime(['29 Sep 1939']) } qr/^Usage: parse_datetime/, 'verify invalid parameter';
-	throws_ok { $f->parse_datetime('29 SepX 1939') } qr/^invalid date received/, 'verify invalid date';
+	$dt = DateTime::Format::Genealogy::parse_datetime('29 Sep 1939');
+	ok($dt->dmy() eq '29-09-1939');
 }
